src/App.css
h1
{
    text-align: center;
    font-size: 50px;
    color: #724202de;
}

body
{
    background-image: url("/Background.png");
    background-color: rgba(194, 233, 255, 0.466);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    min-height: 100vh;
    margin: 0;
}

.settings-button
{
   font-size: 18px;
   cursor: pointer;
   margin-left: 30px;
   height: 35px;
   
}

.settings-button:hover
{
    background-color: rgb(180, 228, 131);
}

.top-bar
{
    width: unset;
    margin-bottom: 25px;
    margin-left: 10px;
    margin-right: 10px;
    padding: 12px 50px;
    background-color: rgba(217, 255, 128, 0.459);
    font-size: 30px;
  
    border-bottom: 2px solid black;
    border-top: 2px solid black;
    border-left: 2px solid black;
    border-right: 2px solid black;
}

